# IQtools-plus

./: .gitignore  CMakeLists.txt
agent-docs/: index.md
cmake/: CompilerOptions.cmake  Dependencies.cmake  GitVersion.cmake  Packaging.cmake
docs/: 1-总统架构.md  2-截图功能.md  3-剪贴板功能.md  4-翻译功能.md  5-QML开发主题规范.md  6-设置页面设计框架与计划.md  AI服务开发实战指南.md  开发快速参考指南.md  截图功能开发实战指南.md  截图实现2.md  插件系统开发实战指南.md  文档体系完成报告.md  翻译引擎开发实战指南.md  项目全景分析与开发指南.md  项目进展总结与下一步计划.md
plugins/: CMakeLists.txt
plugins/plugin_ocr/: CMakeLists.txt
plugins/plugin_qrcode/: CMakeLists.txt
src/: CMakeLists.txt  app.rc  main.cpp
src/app/: AppContext.cpp  AppContext.h  CMakeLists.txt
src/core/: CMakeLists.txt
src/core/config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfigSchema.h
src/core/error/: CMakeLists.txt  Error.h
src/core/event/: CMakeLists.txt  EventBus.cpp  EventBus.h  EventTypes.h
src/core/log/: CMakeLists.txt  JsonFormatter.h  LogModules.h  LogSink.h  Logger.cpp  Logger.h
src/core/plugin/: CMakeLists.txt
src/core/thread/: CMakeLists.txt
src/services/: CMakeLists.txt
src/services/ai/: CMakeLists.txt  IAIService.h  MockAIService.cpp  MockAIService.h
src/services/clipboard/: CMakeLists.txt
src/services/hotkey/: CMakeLists.txt
src/services/screenshot/: CMakeLists.txt
src/services/translate/: CMakeLists.txt  ITranslateService.h  MockTranslateService.cpp  MockTranslateService.h  TranslateTypes.h
src/services/translate/engines/: CMakeLists.txt
src/ui/: CMakeLists.txt  UiResources.cpp  main.qml  qml.qrc
src/ui/components/: AppButton.qml  AppCheckbox.qml  AppComboBox.qml  AppConfirmDialog.qml  AppListItem.qml  AppPage.qml  AppSidebar.qml  AppTextField.qml  AppToast.qml  AppTopBar.qml  NavigationItem.qml  ShortcutCard.qml  SoftCard.qml
src/ui/pages/: AIAssistantPage.qml  ClipboardPage.qml  HomePage.qml  ScreenshotPage.qml  SettingPage.qml  TodoPage.qml  TranslatePage.qml
src/ui/theme/: Theme.qml
src/viewmodels/: AIAssistantViewModel.cpp  AIAssistantViewModel.h  AppShellViewModel.cpp  AppShellViewModel.h  CMakeLists.txt  HomeViewModel.cpp  HomeViewModel.h  LogViewModel.cpp  LogViewModel.h  SettingViewModel.cpp  SettingViewModel.h  TranslateViewModel.cpp  TranslateViewModel.h
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  tst_main_shell.qml
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_app_shell_boot.cpp  test_translate_viewmodel.cpp
